# AutoGenesis

./: LOCAL-LLM-CONFIG-CN.md  README-CN.md  README.md  WEB-README.md  WEB-TESTING-CN.md  WEB-TESTING-WORKFLOW-CN.md  run_tests.py  run_tests2.py  test_bing_scenario.py  test_output.txt  test_results.txt
PPA-UI-Automation-master/: .gitignore  README.md  TEST_GUIDE.md  pytest.ini  requirements.txt  run.py
PPA-UI-Automation-master/common/: action.py  attach.py  mcp_client.py  read_file.py
PPA-UI-Automation-master/data/: base.yaml
PPA-UI-Automation-master/testcase/: conftest.py  test_baidu.py  test_bing.py  test_bing_native.py
appium-mcp-server/llm/: chat.py
bdd_ai_toolkit/resources/: main.ts  webview.html
bdd_ai_toolkit/scripts/: compile.js
behave-demo/: bing_full_output.txt  run_test_direct.py  test_bing_result.txt
behave-demo/features/: add_book.feature  chiphell_test.feature  environment.py  library_test.feature  web_test.feature
playwright-mcp-server/: playwright_session.py  pyproject.toml  simple_server.py  test_mcp_init.py  test_results.txt
playwright-mcp-server/conf/: playwright_conf.json  playwright_conf.template.json
playwright-mcp-server/llm/: __init__.py  chat.py  prompt.py
playwright-mcp-server/tests/: test_config_manager.py  test_llm_chat.py  test_llm_prompt.py  test_playwright_session.py  test_playwright_tool.py  test_response_format.py  test_verify_tools.py
playwright-mcp-server/tools/: gen_code_tool.py  playwright_tool.py  verify_tools.py
playwright-mcp-server/utils/: __init__.py  config_manager.py  gen_code.py  retry.py
(+17 files in other folders)
